--- a/templates/form_alb.html
+++ b/templates/form_alb.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <form action="/submit_alb" method="post">
-    {{ csrf_token() }}
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <h2 style="text-align:center;">{{ settings.title | default("フォーム") }}</h2>
 
     <input type="hidden" name="user_id" id="user_id" value="">
