sheets.pyとsetting.jsonをupdate

--- a/templates/form_alb.html
+++ b/templates/form_alb.html
@@ -71,7 +71,7 @@
 
     <input type="hidden" name="user_id" id="user_id" value="">
 
-    <label for="name">{{ settings.form_label_name | default("ニックネーム") }}</label>
+    <label for="name">{{ settings.form_label_alb_name | default("ニックネーム") }}</label>
     <input type="text" name="name" id="name" required>
 
    <!-- 希望する経験 -->
