--- a/templates/form_alb.html
+++ b/templates/form_alb.html
@@ -111,6 +111,9 @@
     <label for="available">{{ settings.form_label_available | default("稼働可能日・時間") }}</label>
     <input type="text" name="available" id="available" required>
 
+    <label for="reachtime">{{ settings.form_label_reachtime | default("連絡可能時間帯") }}</label>
+    <input type="text" name="reachtime" id="reachtime" required>
+
     {% for field in settings.custom_fields or [] %}
       <label for="{{ field.name }}">{{ field.label }}</label>
       <input type="text" name="{{ field.name }}" id="{{ field.name }}">
