user_idと名前を一括管理、ユーザー一覧シート

--- a/templates/view_classrooms.html
+++ b/templates/view_classrooms.html
@@ -119,7 +119,7 @@
           <td>{{ row[3] }}</td>
           <td>{{ row[4] }}</td>
           <td>
-            <button type="button" onclick="submitForm({{ row_index }})">興味あり</button>
+            <button type="button" onclick="submitForm('{{ row_index }}')">興味あり</button>
           </td>
         </tr>
       {% endfor %}
